<resources>
    <!-- -->
    <string name="app_name">MB-Hub-App</string>

    <!-- -->
    <string name="enable">Enable</string>

    <!-- -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="title_simulate">Simulate</string>

    <!-- -->
    <string name="map_me">I\'m here</string>

    <!-- -->
    <string name="map_picker_dialog_title">Set Location</string>
    <string name="map_picker_dialog_description">Do you want to set this location?</string>
    <string name="map_picker_dialog_neutral">Cancel</string>
    <string name="map_picker_dialog_confirm">Yes</string>

    <!-- -->
    <string name="sim_longitude"><![CDATA[<b>Longitude:</b> %f]]></string>
    <string name="sim_latitude"><![CDATA[<b>Latitude:</b> %f]]></string>
    <string name="sim_set_location">Set Location</string>
    <string name="sim_select_accelerometer">Select accelerometer</string>
    <string name="sim_file_path"><![CDATA[<b>File:</b> %s]]></string>
    <string name="sim_select_sound">Select sound</string>
    <string name="sim_select_image">Select image</string>
    <string name="sim_reset">Reset</string>

    <!-- -->
    <string name="dash_take_picture">Take picture</string>
    <string name="home_acc_title"><b>Accelerometer</b></string>
    <string name="home_acc_interval"><![CDATA[<b>Every:</b> %s]]></string>
    <string name="home_acc_duration"><![CDATA[<b>Duration:</b> %s]]></string>
    <string name="home_img_title"><b>Image</b></string>
    <string name="home_sound_title"><b>Sound</b></string>

    <!-- -->
    <string name="settings_picker_interval"><b>Interval</b></string>
    <string name="settings_picker_duration"><b>Duration</b></string>
    <string name="settings_picker_apply">Apply</string>
    <string name="settings_picker_cancel">Cancel</string>
    <string name="sim_title_type"><b>Type</b></string>
    <string name="option_empty">Empty</string>
    <string name="option_full">Full</string>
    <string name="option_calm">Calm</string>
    <string name="option_active">Active</string>
    <string name="option_noisy">Noisy</string>
    <string name="option_quiet">Quiet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_event">Events</string>
    <string name="event_event_info"><![CDATA[<b>Selected event:</b> %s]]></string>
    <string name="event_title">Name: %s</string>
    <string name="info">Info</string>
</resources>